--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
+    "vue-cookies": "^1.5.12",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
