--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-cookies": "^1.5.12",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.5.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
     "typescript": "^3.2.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
