--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "lint-staged": "^8.1.0",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "typescript": "^3.2.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
   },
   "postcss": {
     "plugins": {
