--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/bingmaps": "0.0.1",
     "axios": "^0.18.0",
+    "bingmaps": "^2.0.3",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-cookies": "^1.5.12",
